# term-learn

./: LICENSE  README.md  logo.txt  term-learn.cabal  terms.txt
app/: Main.hs
src/: TermLearn.hs
src/TermLearn/: Config.hs  Types.hs  UI.hs  Util.hs
src/TermLearn/UI/: Flashcards.hs  Logo.hs  Match.hs  Select.hs  Test.hs
